--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.9.1
 attrs==25.3.0
-Django==4.2.24
+decouple==0.0.7
+Django==5.2.5
 django-environ==0.12.0
 django-filter==25.1
 django-render-partial==0.4
