--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 asgiref==3.9.1
 attrs==25.3.0
-decouple==0.0.7
 Django==5.2.5
 django-environ==0.12.0
 django-filter==25.1
@@ -18,6 +17,7 @@ packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-decouple==3.8
 python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.36.2
