--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,24 @@
 asgiref==3.9.1
 attrs==25.3.0
-Django==5.2.5
+Django==4.2.10
+django-cors-headers==4.9.0
 django-environ==0.12.0
-django-filter==25.1
-django-render-partial==0.4
-django-restframework==0.0.1
 djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-drf-nested-routers==0.95.0
 drf-spectacular==0.28.0
 gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.1
-jsonschema-specifications==2025.4.1
+jsonschema-specifications==2025.9.1
 packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
-PyJWT==2.10.1
-python-decouple==3.8
-python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.36.2
-rpds-py==0.27.0
+rpds-py==0.27.1
 sqlparse==0.5.3
-typing_extensions==4.14.1
+typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
+python-decouple==3.8
+django-filter==25.1
 whitenoise==6.9.0
